# FightKey

./: .gitignore  README.md
KeyPart/Direction Module PCB/: FightKey_DirectionModule-B_Cu.gbr  FightKey_DirectionModule-B_Mask.gbr  FightKey_DirectionModule-B_Paste.gbr  FightKey_DirectionModule-B_SilkS.gbr  FightKey_DirectionModule-Edge_Cuts.gbr  FightKey_DirectionModule-F_Cu.gbr  FightKey_DirectionModule-F_Mask.gbr  FightKey_DirectionModule-F_Paste.gbr  FightKey_DirectionModule-F_SilkS.gbr  FightKey_DirectionModule-job.gbrjob  FightKey_DirectionModule.drl
KeyPart/FightKey_DirectionModule/: FightKey_DirectionModule.kicad_pcb  FightKey_DirectionModule.kicad_pcb-bak  FightKey_DirectionModule.sch  FightKey_DirectionModule.sch-bak
Model/: Enclosure.blend1
enclosure/: Fight Key Enclosure.FCStd  Fight Key Enclosure.FCStd1  FightKey - Bottom Left.stl  FightKey - Bottom Right.stl  FightKey - Top Left.stl  FightKey - Top Plate Left.stl  FightKey - Top Plate Right.stl  FightKey - Top Right.stl  basic-idea.pdn  cut-out.pdn  enclosure.blend  links.txt  trig.pdn
pcb/: FightKey-cache.lib  FightKey.kicad_pcb  FightKey.kicad_prl  FightKey.kicad_pro  FightKey.kicad_sch  FightKey.sch  fp-info-cache
pico/: CMakeLists.txt  CmakeLists.txt  Makefile
pico/include/: Buttons.hpp  Controller.hpp  Hid.hpp  tusb_config.h  usb_descriptors.h
pico/src/: Controller.cpp  Hid.cpp  main.cpp  report.c  usb_descriptors.c
